# embedded-plotter

./: readme.md
embedded-charts/: Cargo.toml
embedded-charts/examples/: line_with_dots.rs
embedded-charts/src/: axis.rs  lib.rs  line.rs
examples/: Cargo.toml
examples/.cargo/: config.toml
