[package]
name = "embedded-charts-examples"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "line"
test = false
bench = false

[dependencies]
esp-hal = { version = "0.22.0", features = ["esp32c3"] }
esp-backtrace = { version = "0.14.2", features = [
  "esp32c3",
  "panic-handler",
  "exception-handler",
  "println",
] }
embedded-charts = { path = "../embedded-charts" }
esp-println = { version = "0.12.0", features = ["esp32c3"] }
embedded-graphics = "0.8.1"
mipidsi = "0.9.0"
fugit = "0.3.7"
static_cell = "2.1.0"
embedded-hal-bus = "0.3.0"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
lto = 'fat'
overflow-checks = false
